chore: removed unused classes + cleaned formatting and used modern Java syntax
(cherry picked from commit 960fa7fcf27009afcc330681df960f8b16d668fc)